--- a/SportsDataApp/SportsDataApp.csproj
+++ b/SportsDataApp/SportsDataApp.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="PulledData\NBAData\" />
+    <Folder Include="PulledData\NFLData\" />
+  </ItemGroup>
+
 </Project>
